# developer_console

./: README.md
googletest/: CMakeLists.txt  README.md  build.sh
googletest/gtest/: GTestDemo.cpp  main.cpp
googletest/hdr/: demo.h
googletest/src/: demo.cpp
makefile/cmake/: CMakeLists.txt  README.md  build.sh
makefile/cmake/gtest/: GTestDemo.cpp
makefile/cmake/src/: main.cpp
makefile/configure/: Makefile.am  README.md  acconfig.h  compile.sh  configure.ac  profile
makefile/configure/hdr/: demo.h
makefile/configure/src/: demo.c  main.c
